--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,7 +12,9 @@ readme = "./README.md"
 [dependencies]
 eyre = "0.6"
 # revm = { version = "8", features = ["serde"] }
-revm = { path = "../dit-revm/crates/revm", features = ["serde"] }
+revm = { git = "git@github.com:fuzzland/dit-revm.git", features = [
+    "serde",
+], rev = "e4a8e58" }
 serde = "1"
 serde_json = "1"
 tracing = "0"
